jbossaop/jboss-aop-2.1.8.GA/src/aop/src/main/java/org/jboss/aop/pointcut/ast/TypeExpressionParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. TypeExpressionParser.java */
package org.jboss.aop.pointcut.ast;

import java.lang.reflect.Modifier;

@SuppressWarnings({"unchecked", "unused"})
public class TypeExpressionParser/*@bgen(jjtree)*/implements TypeExpressionParserTreeConstants, TypeExpressionParserConstants {/*@bgen(jjtree)*/
  protected JJTTypeExpressionParserState jjtree = new JJTTypeExpressionParserState();

  final public ASTStart Start() throws ParseException {
                           /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Expression();
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Expression() throws ParseException {
    if (jj_2_1(234234234)) {
      BooleanExpression();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case HAS:
      case HAS_FIELD:
      case FIELD:
      case CLASS_EXPR:
      case METHOD_EXPR:
      case CONSTRUCTOR_EXPR:
        Concrete();
        break;
      case NOT:
        Not();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void BooleanExpression() throws ParseException {
                                     /*@bgen(jjtree) Boolean */
  ASTBoolean jjtn000 = new ASTBoolean(JJTBOOLEAN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_2(3)) {
        SubExpression();
      } else if (jj_2_3(3)) {
        CompositeExpression();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void CompositeExpression() throws ParseException {
                                         /*@bgen(jjtree) Composite */
  ASTComposite jjtn000 = new ASTComposite(JJTCOMPOSITE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(77);
      SubExpression();
      jj_consume_token(78);
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void Not() throws ParseException {
                   /*@bgen(jjtree) Not */
  ASTNot jjtn000 = new ASTNot(JJTNOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(NOT);
      if (jj_2_4(3)) {
        ConcreteExpression();
      } else if (jj_2_5(3)) {
        CompositeExpression();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void SubExpression() throws ParseException {
                             /*@bgen(jjtree) Sub */
  ASTSub jjtn000 = new ASTSub(JJTSUB);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_6(3)) {
        Not();
      } else if (jj_2_7(3)) {
        ConcreteExpression();
      } else if (jj_2_8(3)) {
        CompositeExpression();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          And();
          break;
        case OR:
          Or();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
        case OR:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_1;
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void And() throws ParseException {
                   /*@bgen(jjtree) And */
  ASTAnd jjtn000 = new ASTAnd(JJTAND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(AND);
      if (jj_2_9(3)) {
        ConcreteExpression();
      } else if (jj_2_10(3)) {
        CompositeExpression();
      } else if (jj_2_11(3)) {
        Not();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Or() throws ParseException {
                 /*@bgen(jjtree) Or */
  ASTOr jjtn000 = new ASTOr(JJTOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OR);
      if (jj_2_12(3)) {
        ConcreteExpression();
      } else if (jj_2_13(3)) {
        CompositeExpression();
      } else if (jj_2_14(3)) {
        Not();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ConcreteExpression() throws ParseException {
    Concrete();
  }

  final public void Concrete() throws ParseException {
    if (jj_2_15(4)) {
      Class();
    } else if (jj_2_16(4)) {
      MethodWrapper();
    } else if (jj_2_17(4)) {
      FieldWrapper();
    } else if (jj_2_18(4)) {
      ConstructorWrapper();
    } else if (jj_2_19(4)) {
      Has();
    } else if (jj_2_20(4)) {
      HasField();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Has() throws ParseException {
                   /*@bgen(jjtree) Has */
  ASTHas jjtn000 = new ASTHas(JJTHAS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(HAS);
      if (jj_2_21(4)) {
        Method();
      } else if (jj_2_22(4)) {
        Constructor();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(BEHAVIOR_CLOSE);
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void HasField() throws ParseException {
                             /*@bgen(jjtree) HasField */
  ASTHasField jjtn000 = new ASTHasField(JJTHASFIELD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(HAS_FIELD);
      Field();
      jj_consume_token(FIELD_CLOSE);
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void FieldWrapper() throws ParseException {
    jj_consume_token(FIELD);
    Field();
    jj_consume_token(FIELD_CLOSE);
  }

  final public void MethodWrapper() throws ParseException {
    jj_consume_token(METHOD_EXPR);
    Method();
    jj_consume_token(BEHAVIOR_CLOSE);
  }

  final public void ConstructorWrapper() throws ParseException {
    jj_consume_token(CONSTRUCTOR_EXPR);
    Constructor();
    jj_consume_token(BEHAVIOR_CLOSE);
  }

  final public void Method() throws ParseException {
 /*@bgen(jjtree) Method */
  ASTMethod jjtn000 = new ASTMethod(JJTMETHOD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token ret, clazz, body;
    try {
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ABSTRACT:
        case FINAL:
        case PRIVATE:
        case PROTECTED:
        case PUBLIC:
        case STATIC:
        case NATIVE:
        case SYNCHRONIZED:
        case BEHAVIOR_NOT:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        Attribute();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ret = jj_consume_token(CLASS);
        break;
      case IDENTIFIER:
        ret = jj_consume_token(IDENTIFIER);
        break;
      case ANNOTATION:
        ret = jj_consume_token(ANNOTATION);
        break;
      case ARRAY_CLASS:
        ret = jj_consume_token(ARRAY_CLASS);
        break;
      case INSTANCEOF:
        ret = jj_consume_token(INSTANCEOF);
        break;
      case TYPEDEF:
        ret = jj_consume_token(TYPEDEF);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        clazz = jj_consume_token(CLASS);
        break;
      case PACKAGE:
        clazz = jj_consume_token(PACKAGE);
        break;
      case IDENTIFIER:
        clazz = jj_consume_token(IDENTIFIER);
        break;
      case ANNOTATION:
        clazz = jj_consume_token(ANNOTATION);
        break;
      case INSTANCEOF:
        clazz = jj_consume_token(INSTANCEOF);
        break;
      case TYPEDEF:
        clazz = jj_consume_token(TYPEDEF);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(SEPARATOR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        body = jj_consume_token(IDENTIFIER);
        break;
      case ANNOTATION:
        body = jj_consume_token(ANNOTATION);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Parameters();
      Throws();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setReturnTypeExpression(ret.image);
    jjtn000.setClassExpression(clazz.image);
    jjtn000.setMethodExpression(body.image);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Attribute() throws ParseException {
 /*@bgen(jjtree) Attribute */
  ASTAttribute jjtn000 = new ASTAttribute(JJTATTRIBUTE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BEHAVIOR_NOT:
        jj_consume_token(BEHAVIOR_NOT);
                    jjtn000.not=true;
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        jj_consume_token(PUBLIC);
              jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
              jjtn000.setValue(Modifier.PUBLIC);
        break;
      case PROTECTED:
        jj_consume_token(PROTECTED);
                                                                   jjtree.closeNodeScope(jjtn000, true);
                                                                   jjtc000 = false;
                                                                   jjtn000.setValue(Modifier.PROTECTED);
        break;
      case PRIVATE:
        jj_consume_token(PRIVATE);
                                                                                                                         jjtree.closeNodeScope(jjtn000, true);
                                                                                                                         jjtc000 = false;
                                                                                                                         jjtn000.setValue(Modifier.PRIVATE);
        break;
      case STATIC:
        jj_consume_token(STATIC);
                                                                                                                                                                            jjtree.closeNodeScope(jjtn000, true);
                                                                                                                                                                            jjtc000 = false;
                                                                                                                                                                            jjtn000.setValue(Modifier.STATIC);
        break;
      case ABSTRACT:
        jj_consume_token(ABSTRACT);
                                                                                                                                                                                                                                jjtree.closeNodeScope(jjtn000, true);
                                                                                                                                                                                                                                jjtc000 = false;
                                                                                                                                                                                                                                jjtn000.setValue(Modifier.ABSTRACT);
        break;
      case FINAL:
        jj_consume_token(FINAL);
                                                                                                                                                                                                                                                                                   jjtree.closeNodeScope(jjtn000, true);
                                                                                                                                                                                                                                                                                   jjtc000 = false;
                                                                                                                                                                                                                                                                                   jjtn000.setValue(Modifier.FINAL);
        break;
      case NATIVE:
        jj_consume_token(NATIVE);
                                                                                                                                                                                                                                                                                                                                    jjtree.closeNodeScope(jjtn000, true);
                                                                                                                                                                                                                                                                                                                                    jjtc000 = false;
                                                                                                                                                                                                                                                                                                                                    jjtn000.setValue(Modifier.NATIVE);
        break;
      case SYNCHRONIZED:
        jj_consume_token(SYNCHRONIZED);
                                                                                                                                                                                                                                                                                                                                                                                            jjtree.closeNodeScope(jjtn000, true);
                                                                                                                                                                                                                                                                                                                                                                                            jjtc000 = false;
                                                                                                                                                                                                                                                                                                                                                                                            jjtn000.setValue(Modifier.SYNCHRONIZED);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Constructor() throws ParseException {
 /*@bgen(jjtree) Constructor */
  ASTConstructor jjtn000 = new ASTConstructor(JJTCONSTRUCTOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token clazz, danew;
    try {
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PRIVATE:
        case PROTECTED:
        case PUBLIC:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_3;
        }
        ConstructorAttribute();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        clazz = jj_consume_token(CLASS);
        break;
      case PACKAGE:
        clazz = jj_consume_token(PACKAGE);
        break;
      case IDENTIFIER:
        clazz = jj_consume_token(IDENTIFIER);
        break;
      case ANNOTATION:
        clazz = jj_consume_token(ANNOTATION);
        break;
      case INSTANCEOF:
        clazz = jj_consume_token(INSTANCEOF);
        break;
      case TYPEDEF:
        clazz = jj_consume_token(TYPEDEF);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtn000.setClassExpression(clazz.image);
      jj_consume_token(SEPARATOR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEW:
        danew = jj_consume_token(NEW);
        break;
      case ANNOTATION:
        danew = jj_consume_token(ANNOTATION);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Parameters();
      Throws();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setNewExpression(danew.image);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
